--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<div style="color:red;text-align:center;font-size:30px">RAm RAM RAM</div>
+<html>
+<head>
+<link rel="stylesheet" type=text/css href="uv1.css">
+</head>
+<body>
+
+<div class=box1>
+</div>
+
+
+
+</body>
+</html>
