--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 </head>
 <body>
   
-  <div class="cat">
-      <div class="cat1">
+  <div class="uv">
+      <div class="uv1">yuvi
       </div>
-      <div class="cat2">
+      <div class="uv2">yuvi
       </div>
-      <div class="cat3">
+      <div class="uv3">yuvi
       </div>
-      <div class="cat4">
+      <div class="uv4">yuvi
       </div>
-      <div class="cat5">
+      <div class="uv5">yuvi
       </div>
-      <div class="cat6">
+      <div class="uv6">yuvi
       </div>
-      <div class="cat7">
+      <div class="uv7">yuvi
       </div>
-      <div class="cat8">
+      <div class="uv8">yuvi
       </div>
-      <div class="cat9">
+      <div class="uv9">yuvi
       </div>
   </div>    
 
