--- a/index.html
+++ b/index.html
@@ -18,7 +18,27 @@
         <li>UV</li>
         
       </ul>
-  </div>    
+  </div> 
+  
+  <div class="image">
+    
+    <div class="img1">
+    </div>
+    <div class="img2">
+    </div>
+    <div class="img3">
+    </div>
+    <div class="img4">
+    </div>
+    <div class="img5">
+    </div>
+    <div class="img6">
+    </div>
+    <div class="img7">
+    </div>
+    <div class="img8">
+    </div>
+  </div>
 
 
 </body>
